syntax = "proto3";

package helloworld;

// 指定 Go 包的路径和包名
option go_package = "../go_demo;helloworld";

// 定义请求消息
message HelloRequest {
  string name = 1;
}

// 定义响应消息
message HelloReply {
  string message = 1;
}

// 定义服务
service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
}
